--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,8 @@
 .header {
     background-color: var(--grey);
     padding: 1rem;
+    position: relative;
+    z-index: 2;
 }
 
 .header h1 {
@@ -41,4 +43,10 @@
 .header ul li a{
     color: var(--turquiose);
     font-size: 1.5rem;
+}
+
+.frontPageImage img{
+    max-width: 100%;
+    transform: translate(0, -200px);
+    z-index: 0;
 }
