--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@
 /* About Me */
 .aboutMe {
     display: flex;
+    text-align: left;
     transform: translate(0, -150px);
 }
 
@@ -80,3 +81,25 @@
 }
 
 /* Work */
+
+.work {
+    color: var(--lightBlue);
+    display: flex;
+    text-align: center;
+}
+
+.work h2{
+    border-right: .25rem solid var(--lightBlue);
+    color: var(--lightBlue);
+    font-size: 3rem;
+    height: 500px;
+    padding-right: 1rem;
+    text-align: right;
+    width: 20%;
+}
+
+.work .workExample1 img {
+    padding: 2rem;
+    position: relative;
+    max-width: 100%;
+}
